@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-01-06"
+#define RUBY_RELEASE_DATE "2009-01-07"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090106
-#define RUBY_PATCHLEVEL 78
+#define RUBY_RELEASE_CODE 20090107
+#define RUBY_PATCHLEVEL 79
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
 #define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 6
+#define RUBY_RELEASE_DAY 7
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
